[gd_scene load_steps=8 format=2]

[ext_resource path="res://code/ui/menu/equipment_screen.gd" type="Script" id=1]
[ext_resource path="res://assets/ui/panels/Menu_Info_Panel.tres" type="StyleBox" id=2]
[ext_resource path="res://assets/ui/fonts/Font24.tres" type="DynamicFont" id=3]
[ext_resource path="res://assets/ui/panels/Hover_Menu_Info_Panel.tres" type="StyleBox" id=4]
[ext_resource path="res://assets/ui/panels/Disabled_Menu_Info_Panel.tres" type="StyleBox" id=5]
[ext_resource path="res://code/overworld/npcs/shop/equipment_compare.tscn" type="PackedScene" id=6]
[ext_resource path="res://code/ui/menu/item_slot_0.gd" type="Script" id=7]

[node name="Equips" type="Control"]
rect_scale = Vector2( 1.865, 1.4 )
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
margin_right = 1030.0
margin_bottom = 770.0
custom_styles/panel = ExtResource( 2 )

[node name="HBoxContainer" type="HBoxContainer" parent="Panel"]
anchor_right = 0.4
margin_left = -1.0
margin_top = -4.0
margin_right = 759.0
margin_bottom = 767.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="Slots" type="VBoxContainer" parent="Panel/HBoxContainer"]
margin_right = 300.0
margin_bottom = 771.0
rect_min_size = Vector2( 300, 50 )

[node name="CurrentMenu" type="Button" parent="Panel/HBoxContainer/Slots" groups=[
"text",
]]
margin_right = 300.0
margin_bottom = 70.0
rect_min_size = Vector2( 0, 70 )
focus_mode = 0
custom_styles/normal = ExtResource( 2 )
custom_fonts/font = ExtResource( 3 )
enabled_focus_mode = 0
text = "Equipaments"

[node name="Weapon" type="Button" parent="Panel/HBoxContainer/Slots" groups=[
"text",
]]
margin_top = 74.0
margin_right = 300.0
margin_bottom = 144.0
rect_min_size = Vector2( 0, 70 )
custom_styles/hover = ExtResource( 4 )
custom_styles/focus = ExtResource( 4 )
custom_styles/disabled = ExtResource( 5 )
custom_styles/normal = ExtResource( 2 )
custom_fonts/font = ExtResource( 3 )
text = "Weapon"

[node name="Head" type="Button" parent="Panel/HBoxContainer/Slots" groups=[
"text",
]]
margin_top = 148.0
margin_right = 300.0
margin_bottom = 218.0
rect_min_size = Vector2( 0, 70 )
custom_styles/hover = ExtResource( 4 )
custom_styles/focus = ExtResource( 4 )
custom_styles/disabled = ExtResource( 5 )
custom_styles/normal = ExtResource( 2 )
custom_fonts/font = ExtResource( 3 )
text = "Head"

[node name="Body" type="Button" parent="Panel/HBoxContainer/Slots" groups=[
"text",
]]
margin_top = 222.0
margin_right = 300.0
margin_bottom = 292.0
rect_min_size = Vector2( 0, 70 )
custom_styles/hover = ExtResource( 4 )
custom_styles/focus = ExtResource( 4 )
custom_styles/disabled = ExtResource( 5 )
custom_styles/normal = ExtResource( 2 )
custom_fonts/font = ExtResource( 3 )
text = "Body"

[node name="Accessory1" type="Button" parent="Panel/HBoxContainer/Slots" groups=[
"text",
]]
margin_top = 296.0
margin_right = 300.0
margin_bottom = 366.0
rect_min_size = Vector2( 0, 70 )
custom_styles/hover = ExtResource( 4 )
custom_styles/focus = ExtResource( 4 )
custom_styles/disabled = ExtResource( 5 )
custom_styles/normal = ExtResource( 2 )
custom_fonts/font = ExtResource( 3 )
text = "Accessory"

[node name="Accessory2" type="Button" parent="Panel/HBoxContainer/Slots" groups=[
"text",
]]
margin_top = 370.0
margin_right = 300.0
margin_bottom = 440.0
rect_min_size = Vector2( 0, 70 )
custom_styles/hover = ExtResource( 4 )
custom_styles/focus = ExtResource( 4 )
custom_styles/disabled = ExtResource( 5 )
custom_styles/normal = ExtResource( 2 )
custom_fonts/font = ExtResource( 3 )
text = "Accessory"

[node name="Back" type="Button" parent="Panel/HBoxContainer/Slots" groups=[
"text",
]]
margin_top = 444.0
margin_right = 300.0
margin_bottom = 514.0
rect_min_size = Vector2( 0, 70 )
custom_styles/hover = ExtResource( 4 )
custom_styles/focus = ExtResource( 4 )
custom_styles/disabled = ExtResource( 5 )
custom_styles/normal = ExtResource( 2 )
custom_fonts/font = ExtResource( 3 )
text = "Back"

[node name="Info" type="VBoxContainer" parent="Panel/HBoxContainer/Slots"]
margin_top = 518.0
margin_right = 300.0
margin_bottom = 738.0
rect_min_size = Vector2( 0, 220 )

[node name="Description" type="Label" parent="Panel/HBoxContainer/Slots/Info" groups=[
"text",
]]
margin_right = 300.0
margin_bottom = 80.0
rect_min_size = Vector2( 0, 80 )
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 1, 1, 0.996078, 1 )
text = " 
"

[node name="Comparison" parent="Panel/HBoxContainer/Slots/Info" instance=ExtResource( 6 )]
margin_top = 84.0
margin_right = 300.0
margin_bottom = 84.0

[node name="Equips" type="VBoxContainer" parent="Panel/HBoxContainer"]
editor/display_folded = true
margin_left = 304.0
margin_right = 884.0
margin_bottom = 771.0
rect_min_size = Vector2( 580, 0 )

[node name="EquipSlot0" type="Button" parent="Panel/HBoxContainer/Equips" groups=[
"text",
]]
visible = false
margin_right = 720.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 40 )
custom_styles/hover = ExtResource( 4 )
custom_styles/focus = ExtResource( 4 )
custom_styles/disabled = ExtResource( 5 )
custom_styles/normal = ExtResource( 2 )
custom_fonts/font = ExtResource( 3 )
text = "Ppau Kweh"
script = ExtResource( 7 )

[node name="EquipSlot1" type="Button" parent="Panel/HBoxContainer/Equips" groups=[
"text",
]]
visible = false
margin_right = 720.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 40 )
custom_styles/hover = ExtResource( 4 )
custom_styles/focus = ExtResource( 4 )
custom_styles/disabled = ExtResource( 5 )
custom_styles/normal = ExtResource( 2 )
custom_fonts/font = ExtResource( 3 )
text = "Ppau Kweh"
script = ExtResource( 7 )

[node name="EquipSlot2" type="Button" parent="Panel/HBoxContainer/Equips" groups=[
"text",
]]
visible = false
margin_right = 720.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 40 )
custom_styles/hover = ExtResource( 4 )
custom_styles/focus = ExtResource( 4 )
custom_styles/disabled = ExtResource( 5 )
custom_styles/normal = ExtResource( 2 )
custom_fonts/font = ExtResource( 3 )
text = "Ppau Kweh"
script = ExtResource( 7 )

[node name="EquipSlot3" type="Button" parent="Panel/HBoxContainer/Equips" groups=[
"text",
]]
visible = false
margin_right = 720.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 40 )
custom_styles/hover = ExtResource( 4 )
custom_styles/focus = ExtResource( 4 )
custom_styles/disabled = ExtResource( 5 )
custom_styles/normal = ExtResource( 2 )
custom_fonts/font = ExtResource( 3 )
text = "Ppau Kweh"
script = ExtResource( 7 )

[node name="EquipSlot4" type="Button" parent="Panel/HBoxContainer/Equips" groups=[
"text",
]]
visible = false
margin_right = 720.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 40 )
custom_styles/hover = ExtResource( 4 )
custom_styles/focus = ExtResource( 4 )
custom_styles/disabled = ExtResource( 5 )
custom_styles/normal = ExtResource( 2 )
custom_fonts/font = ExtResource( 3 )
text = "Ppau Kweh"
script = ExtResource( 7 )

[node name="EquipSlot5" type="Button" parent="Panel/HBoxContainer/Equips" groups=[
"text",
]]
visible = false
margin_right = 720.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 40 )
custom_styles/hover = ExtResource( 4 )
custom_styles/focus = ExtResource( 4 )
custom_styles/disabled = ExtResource( 5 )
custom_styles/normal = ExtResource( 2 )
custom_fonts/font = ExtResource( 3 )
text = "Ppau Kweh"
script = ExtResource( 7 )

[node name="EquipSlot6" type="Button" parent="Panel/HBoxContainer/Equips" groups=[
"text",
]]
visible = false
margin_right = 720.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 40 )
custom_styles/hover = ExtResource( 4 )
custom_styles/focus = ExtResource( 4 )
custom_styles/disabled = ExtResource( 5 )
custom_styles/normal = ExtResource( 2 )
custom_fonts/font = ExtResource( 3 )
text = "Ppau Kweh"
script = ExtResource( 7 )

[node name="EquipSlot7" type="Button" parent="Panel/HBoxContainer/Equips" groups=[
"text",
]]
visible = false
margin_right = 720.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 40 )
custom_styles/hover = ExtResource( 4 )
custom_styles/focus = ExtResource( 4 )
custom_styles/disabled = ExtResource( 5 )
custom_styles/normal = ExtResource( 2 )
custom_fonts/font = ExtResource( 3 )
text = "Ppau Kweh"
script = ExtResource( 7 )

[node name="EquipSlot8" type="Button" parent="Panel/HBoxContainer/Equips" groups=[
"text",
]]
visible = false
margin_right = 720.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 40 )
custom_styles/hover = ExtResource( 4 )
custom_styles/focus = ExtResource( 4 )
custom_styles/disabled = ExtResource( 5 )
custom_styles/normal = ExtResource( 2 )
custom_fonts/font = ExtResource( 3 )
text = "Ppau Kweh"
script = ExtResource( 7 )

[node name="EquipSlot9" type="Button" parent="Panel/HBoxContainer/Equips" groups=[
"text",
]]
visible = false
margin_right = 720.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 40 )
custom_styles/hover = ExtResource( 4 )
custom_styles/focus = ExtResource( 4 )
custom_styles/disabled = ExtResource( 5 )
custom_styles/normal = ExtResource( 2 )
custom_fonts/font = ExtResource( 3 )
text = "Ppau Kweh"
script = ExtResource( 7 )

[node name="EquipSlot10" type="Button" parent="Panel/HBoxContainer/Equips" groups=[
"text",
]]
visible = false
margin_right = 720.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 40 )
custom_styles/hover = ExtResource( 4 )
custom_styles/focus = ExtResource( 4 )
custom_styles/disabled = ExtResource( 5 )
custom_styles/normal = ExtResource( 2 )
custom_fonts/font = ExtResource( 3 )
text = "Ppau Kweh"
script = ExtResource( 7 )

[node name="EquipSlot11" type="Button" parent="Panel/HBoxContainer/Equips" groups=[
"text",
]]
visible = false
margin_right = 720.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 40 )
custom_styles/hover = ExtResource( 4 )
custom_styles/focus = ExtResource( 4 )
custom_styles/disabled = ExtResource( 5 )
custom_styles/normal = ExtResource( 2 )
custom_fonts/font = ExtResource( 3 )
text = "Ppau Kweh"
script = ExtResource( 7 )

[node name="EquipSlot12" type="Button" parent="Panel/HBoxContainer/Equips" groups=[
"text",
]]
visible = false
margin_right = 720.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 40 )
custom_styles/hover = ExtResource( 4 )
custom_styles/focus = ExtResource( 4 )
custom_styles/disabled = ExtResource( 5 )
custom_styles/normal = ExtResource( 2 )
custom_fonts/font = ExtResource( 3 )
text = "Ppau Kweh"
script = ExtResource( 7 )

[node name="EquipSlot13" type="Button" parent="Panel/HBoxContainer/Equips" groups=[
"text",
]]
visible = false
margin_right = 720.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 40 )
custom_styles/hover = ExtResource( 4 )
custom_styles/focus = ExtResource( 4 )
custom_styles/disabled = ExtResource( 5 )
custom_styles/normal = ExtResource( 2 )
custom_fonts/font = ExtResource( 3 )
text = "Ppau Kweh"
script = ExtResource( 7 )

[node name="EquipSlot14" type="Button" parent="Panel/HBoxContainer/Equips" groups=[
"text",
]]
visible = false
margin_right = 720.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 40 )
custom_styles/hover = ExtResource( 4 )
custom_styles/focus = ExtResource( 4 )
custom_styles/disabled = ExtResource( 5 )
custom_styles/normal = ExtResource( 2 )
custom_fonts/font = ExtResource( 3 )
text = "Ppau Kweh"
script = ExtResource( 7 )

[node name="EquipSlot15" type="Button" parent="Panel/HBoxContainer/Equips" groups=[
"text",
]]
visible = false
margin_right = 720.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 40 )
custom_styles/hover = ExtResource( 4 )
custom_styles/focus = ExtResource( 4 )
custom_styles/disabled = ExtResource( 5 )
custom_styles/normal = ExtResource( 2 )
custom_fonts/font = ExtResource( 3 )
text = "Ppau Kweh"
script = ExtResource( 7 )

[node name="EquipSlot16" type="Button" parent="Panel/HBoxContainer/Equips" groups=[
"text",
]]
visible = false
margin_right = 720.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 40 )
custom_styles/hover = ExtResource( 4 )
custom_styles/focus = ExtResource( 4 )
custom_styles/disabled = ExtResource( 5 )
custom_styles/normal = ExtResource( 2 )
custom_fonts/font = ExtResource( 3 )
text = "Ppau Kweh"
script = ExtResource( 7 )

[node name="EquipSlot17" type="Button" parent="Panel/HBoxContainer/Equips" groups=[
"text",
]]
visible = false
margin_right = 720.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 40 )
custom_styles/hover = ExtResource( 4 )
custom_styles/focus = ExtResource( 4 )
custom_styles/disabled = ExtResource( 5 )
custom_styles/normal = ExtResource( 2 )
custom_fonts/font = ExtResource( 3 )
text = "Ppau Kweh"
script = ExtResource( 7 )

[node name="EquipSlot18" type="Button" parent="Panel/HBoxContainer/Equips" groups=[
"text",
]]
visible = false
margin_right = 720.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 40 )
custom_styles/hover = ExtResource( 4 )
custom_styles/focus = ExtResource( 4 )
custom_styles/disabled = ExtResource( 5 )
custom_styles/normal = ExtResource( 2 )
custom_fonts/font = ExtResource( 3 )
text = "Ppau Kweh"
script = ExtResource( 7 )

[node name="EquipSlot19" type="Button" parent="Panel/HBoxContainer/Equips" groups=[
"text",
]]
visible = false
margin_right = 720.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 40 )
custom_styles/hover = ExtResource( 4 )
custom_styles/focus = ExtResource( 4 )
custom_styles/disabled = ExtResource( 5 )
custom_styles/normal = ExtResource( 2 )
custom_fonts/font = ExtResource( 3 )
text = "Ppau Kweh"
script = ExtResource( 7 )

[node name="EquipSlot20" type="Button" parent="Panel/HBoxContainer/Equips" groups=[
"text",
]]
visible = false
margin_right = 720.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 40 )
custom_styles/hover = ExtResource( 4 )
custom_styles/focus = ExtResource( 4 )
custom_styles/disabled = ExtResource( 5 )
custom_styles/normal = ExtResource( 2 )
custom_fonts/font = ExtResource( 3 )
text = "Ppau Kweh"
script = ExtResource( 7 )

[connection signal="pressed" from="Panel/HBoxContainer/Slots/Weapon" to="." method="_on_Weapon_pressed"]
[connection signal="pressed" from="Panel/HBoxContainer/Slots/Head" to="." method="_on_Head_pressed"]
[connection signal="pressed" from="Panel/HBoxContainer/Slots/Body" to="." method="_on_Body_pressed"]
[connection signal="pressed" from="Panel/HBoxContainer/Slots/Accessory1" to="." method="_on_Acessory1_pressed"]
[connection signal="pressed" from="Panel/HBoxContainer/Slots/Accessory2" to="." method="_on_Acessory2_pressed"]
[connection signal="pressed" from="Panel/HBoxContainer/Slots/Back" to="." method="_on_Back_pressed"]
[connection signal="focus_entered" from="Panel/HBoxContainer/Equips/EquipSlot0" to="Panel/HBoxContainer/Equips/EquipSlot0" method="_on_ItemSlot0_focus_entered"]
[connection signal="pressed" from="Panel/HBoxContainer/Equips/EquipSlot0" to="Panel/HBoxContainer/Equips/EquipSlot0" method="_on_ItemSlot0_pressed"]
[connection signal="focus_entered" from="Panel/HBoxContainer/Equips/EquipSlot1" to="Panel/HBoxContainer/Equips/EquipSlot1" method="_on_ItemSlot0_focus_entered"]
[connection signal="pressed" from="Panel/HBoxContainer/Equips/EquipSlot1" to="Panel/HBoxContainer/Equips/EquipSlot1" method="_on_ItemSlot0_pressed"]
[connection signal="focus_entered" from="Panel/HBoxContainer/Equips/EquipSlot2" to="Panel/HBoxContainer/Equips/EquipSlot2" method="_on_ItemSlot0_focus_entered"]
[connection signal="pressed" from="Panel/HBoxContainer/Equips/EquipSlot2" to="Panel/HBoxContainer/Equips/EquipSlot2" method="_on_ItemSlot0_pressed"]
[connection signal="focus_entered" from="Panel/HBoxContainer/Equips/EquipSlot3" to="Panel/HBoxContainer/Equips/EquipSlot3" method="_on_ItemSlot0_focus_entered"]
[connection signal="pressed" from="Panel/HBoxContainer/Equips/EquipSlot3" to="Panel/HBoxContainer/Equips/EquipSlot3" method="_on_ItemSlot0_pressed"]
[connection signal="focus_entered" from="Panel/HBoxContainer/Equips/EquipSlot4" to="Panel/HBoxContainer/Equips/EquipSlot4" method="_on_ItemSlot0_focus_entered"]
[connection signal="pressed" from="Panel/HBoxContainer/Equips/EquipSlot4" to="Panel/HBoxContainer/Equips/EquipSlot4" method="_on_ItemSlot0_pressed"]
[connection signal="focus_entered" from="Panel/HBoxContainer/Equips/EquipSlot5" to="Panel/HBoxContainer/Equips/EquipSlot5" method="_on_ItemSlot0_focus_entered"]
[connection signal="pressed" from="Panel/HBoxContainer/Equips/EquipSlot5" to="Panel/HBoxContainer/Equips/EquipSlot5" method="_on_ItemSlot0_pressed"]
[connection signal="focus_entered" from="Panel/HBoxContainer/Equips/EquipSlot6" to="Panel/HBoxContainer/Equips/EquipSlot6" method="_on_ItemSlot0_focus_entered"]
[connection signal="pressed" from="Panel/HBoxContainer/Equips/EquipSlot6" to="Panel/HBoxContainer/Equips/EquipSlot6" method="_on_ItemSlot0_pressed"]
[connection signal="focus_entered" from="Panel/HBoxContainer/Equips/EquipSlot7" to="Panel/HBoxContainer/Equips/EquipSlot7" method="_on_ItemSlot0_focus_entered"]
[connection signal="pressed" from="Panel/HBoxContainer/Equips/EquipSlot7" to="Panel/HBoxContainer/Equips/EquipSlot7" method="_on_ItemSlot0_pressed"]
[connection signal="focus_entered" from="Panel/HBoxContainer/Equips/EquipSlot8" to="Panel/HBoxContainer/Equips/EquipSlot8" method="_on_ItemSlot0_focus_entered"]
[connection signal="pressed" from="Panel/HBoxContainer/Equips/EquipSlot8" to="Panel/HBoxContainer/Equips/EquipSlot8" method="_on_ItemSlot0_pressed"]
[connection signal="focus_entered" from="Panel/HBoxContainer/Equips/EquipSlot9" to="Panel/HBoxContainer/Equips/EquipSlot9" method="_on_ItemSlot0_focus_entered"]
[connection signal="pressed" from="Panel/HBoxContainer/Equips/EquipSlot9" to="Panel/HBoxContainer/Equips/EquipSlot9" method="_on_ItemSlot0_pressed"]
[connection signal="focus_entered" from="Panel/HBoxContainer/Equips/EquipSlot10" to="Panel/HBoxContainer/Equips/EquipSlot10" method="_on_ItemSlot0_focus_entered"]
[connection signal="pressed" from="Panel/HBoxContainer/Equips/EquipSlot10" to="Panel/HBoxContainer/Equips/EquipSlot10" method="_on_ItemSlot0_pressed"]
[connection signal="focus_entered" from="Panel/HBoxContainer/Equips/EquipSlot11" to="Panel/HBoxContainer/Equips/EquipSlot11" method="_on_ItemSlot0_focus_entered"]
[connection signal="pressed" from="Panel/HBoxContainer/Equips/EquipSlot11" to="Panel/HBoxContainer/Equips/EquipSlot11" method="_on_ItemSlot0_pressed"]
[connection signal="focus_entered" from="Panel/HBoxContainer/Equips/EquipSlot12" to="Panel/HBoxContainer/Equips/EquipSlot12" method="_on_ItemSlot0_focus_entered"]
[connection signal="pressed" from="Panel/HBoxContainer/Equips/EquipSlot12" to="Panel/HBoxContainer/Equips/EquipSlot12" method="_on_ItemSlot0_pressed"]
[connection signal="focus_entered" from="Panel/HBoxContainer/Equips/EquipSlot13" to="Panel/HBoxContainer/Equips/EquipSlot13" method="_on_ItemSlot0_focus_entered"]
[connection signal="pressed" from="Panel/HBoxContainer/Equips/EquipSlot13" to="Panel/HBoxContainer/Equips/EquipSlot13" method="_on_ItemSlot0_pressed"]
[connection signal="focus_entered" from="Panel/HBoxContainer/Equips/EquipSlot14" to="Panel/HBoxContainer/Equips/EquipSlot14" method="_on_ItemSlot0_focus_entered"]
[connection signal="pressed" from="Panel/HBoxContainer/Equips/EquipSlot14" to="Panel/HBoxContainer/Equips/EquipSlot14" method="_on_ItemSlot0_pressed"]
[connection signal="focus_entered" from="Panel/HBoxContainer/Equips/EquipSlot15" to="Panel/HBoxContainer/Equips/EquipSlot15" method="_on_ItemSlot0_focus_entered"]
[connection signal="pressed" from="Panel/HBoxContainer/Equips/EquipSlot15" to="Panel/HBoxContainer/Equips/EquipSlot15" method="_on_ItemSlot0_pressed"]
[connection signal="focus_entered" from="Panel/HBoxContainer/Equips/EquipSlot16" to="Panel/HBoxContainer/Equips/EquipSlot16" method="_on_ItemSlot0_focus_entered"]
[connection signal="pressed" from="Panel/HBoxContainer/Equips/EquipSlot16" to="Panel/HBoxContainer/Equips/EquipSlot16" method="_on_ItemSlot0_pressed"]
[connection signal="focus_entered" from="Panel/HBoxContainer/Equips/EquipSlot17" to="Panel/HBoxContainer/Equips/EquipSlot17" method="_on_ItemSlot0_focus_entered"]
[connection signal="pressed" from="Panel/HBoxContainer/Equips/EquipSlot17" to="Panel/HBoxContainer/Equips/EquipSlot17" method="_on_ItemSlot0_pressed"]
[connection signal="focus_entered" from="Panel/HBoxContainer/Equips/EquipSlot18" to="Panel/HBoxContainer/Equips/EquipSlot18" method="_on_ItemSlot0_focus_entered"]
[connection signal="pressed" from="Panel/HBoxContainer/Equips/EquipSlot18" to="Panel/HBoxContainer/Equips/EquipSlot18" method="_on_ItemSlot0_pressed"]
[connection signal="focus_entered" from="Panel/HBoxContainer/Equips/EquipSlot19" to="Panel/HBoxContainer/Equips/EquipSlot19" method="_on_ItemSlot0_focus_entered"]
[connection signal="pressed" from="Panel/HBoxContainer/Equips/EquipSlot19" to="Panel/HBoxContainer/Equips/EquipSlot19" method="_on_ItemSlot0_pressed"]
[connection signal="focus_entered" from="Panel/HBoxContainer/Equips/EquipSlot20" to="Panel/HBoxContainer/Equips/EquipSlot20" method="_on_ItemSlot0_focus_entered"]
[connection signal="pressed" from="Panel/HBoxContainer/Equips/EquipSlot20" to="Panel/HBoxContainer/Equips/EquipSlot20" method="_on_ItemSlot0_pressed"]
